        all computers, dropping frames if the rendering can't keep up. At 10fps or less,
        the game will start to slow down to stay playable
    - Scrolling speed can now include decimals for more control
    - 'gui Input' objects could not be deleted
    - 'gui Input variable password x=0 y=0' will actually hide the text with **** as mentioned in docs
    - paths to content files cached on game start to make loading files faster
    - 'setprop [object] screen_setting' to change whether the object is "try_bottom"

*PyWright 0.986
    - Fixed setting blipsound from character animation files. You can't set the blipsound this
        way for "hide" characters. Prefered method is to 'set char_[folder name]_defsound blipfemale.ogg',
        as you only have to set this once and it works for all animation files in the folder, and lasts
        for the entire game. If your character goes through a sex change you can also change it easier :)
    - Back button blocks script again so it will work properly from check scripts
    - fixed some debugging info that broke unicode, multi character sets work again
    - slightly better gui scrollbars, was cutting off lower pixels
    - changed method of running the court_record button macros to fix some order of operation bugs
    - bugs fixed in wide examine scenes related to court record button, and correct scroll position
    - in rare cases save could crash
    - some timing issues with text reverted to old code, still need to work harder to make things
        framerate independant
    - press F3 while a game is running in debug mode ('set _debug true') to see a dialog showing
        the currently running script code with the current line highlighted in red

*PyWright 0.985

    Wrightscript
    - Fixed letter spacing when using pwinternational font (which changed to be the default)
    - "noback" option added for 'list' and 'present', USE THIS instead of setting _list_back_button
        and _cr_back_button variables.